--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -74,7 +74,7 @@
   01. Global Style 
 *************************************/
 
-@import url('../../../css');
+@import url('css');
 
 body {
 	font-family: 'Open Sans';
